breaking code so I can use my template

--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,10 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div class="sidebar"></div>
-    <div class="mainContentContainer"></div>
+    <div class="sidebar">I am a sidebar</div>
+    <div class="mainContentContainer">I am the main container</div>
+    <script>
+      console.log('hello');
+    </script>
   </body>
 </html>
