started creating a navigation container.

--- a/src/template.html
+++ b/src/template.html
@@ -6,10 +6,11 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div class="sidebar">I am a sidebar</div>
+    <div class="sidebar">
+      <nav>
+        <ul></ul>
+      </nav>
+    </div>
     <div class="mainContentContainer">I am the main container</div>
-    <script>
-      console.log('hello');
-    </script>
   </body>
 </html>
