--- a/src/template.html
+++ b/src/template.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div class="sidebar">
-      <nav>
-        <ul></ul>
+      <nav class="primary-nav">
+        <ul role="list" class="nav"></ul>
       </nav>
     </div>
     <div class="mainContentContainer">I am the main container</div>
