when I created the skip nav via js it was being put at the bottom of the content. hard coded it to the template. will probaby adjust the link as I go.

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
+    <a href=".mainContentContainer">skip navigation</a>
     <div class="sidebar">
       <nav class="primary-nav">
         <ul role="list" class="nav"></ul>
