updated the skip nav to link to the main container.

--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <a class="skip-nav-link" href="#mainContent">skip navigation</a>
+    <a class="skip-nav-link" href="#mainContentContainer">skip navigation</a>
     <div class="sidebar">
       <nav class="primary-nav">
         <ul id="navLists">
