--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
+  <header id="header">To Do List</header>
   <body>
     <a class="skip-nav-link" href="#mainContentContainer">skip navigation</a>
     <div class="sidebar">
